syntax = "proto3";

package pb;
option go_package = "./pb";

message UploadFileReq {
    string userId = 1;
    string fileName = 2;
    string filePath = 3;
    string content_type = 4;
    int64  fileSize = 5;
    bytes  chunk = 6;
}

message UploadFileResp {
    string file_path = 1;
}

service DocService {
    rpc UploadFile(stream UploadFileReq) returns (UploadFileResp);
}
